# compiz

./: AUTHORS  CMakeLists.txt  INSTALL  Makefile.in  NEWS  aclocal.m4  compiz.pc.in  compiz_0.0.13+git20060928.orig.tar.gz.delta  compiz_0.0.13+git20060928.orig.tar.gz.id  compiz_0.2.0.orig.tar.gz.delta  compiz_0.2.0.orig.tar.gz.id  compiz_0.2.2.orig.tar.gz.delta  compiz_0.2.2.orig.tar.gz.id  compiz_0.3.6.orig.tar.gz.delta  compiz_0.3.6.orig.tar.gz.id  compiz_0.5.0.dfsg.orig.tar.gz.delta  compiz_0.5.0.dfsg.orig.tar.gz.id  compiz_0.5.2.orig.tar.gz.delta  compiz_0.5.2.orig.tar.gz.id  compiz_0.6.3~git20071104.c9009efd.orig.tar.gz.delta  compiz_0.6.3~git20071104.c9009efd.orig.tar.gz.id  compiz_0.6.3~git20071208.25941d14.orig.tar.gz.delta  compiz_0.6.3~git20071208.25941d14.orig.tar.gz.id  compiz_0.6.3~git20071222.061ff159.orig.tar.gz.delta  compiz_0.6.3~git20071222.061ff159.orig.tar.gz.id  compiz_0.6.3~git20080115.0ea58487.orig.tar.gz.delta  compiz_0.6.3~git20080115.0ea58487.orig.tar.gz.id  compiz_0.7.4.orig.tar.gz.delta  compiz_0.7.4.orig.tar.gz.id  compiz_0.7.6.orig.tar.gz.delta  compiz_0.7.6.orig.tar.gz.id  compiz_0.8.2.orig.tar.gz.delta  compiz_0.8.2.orig.tar.gz.id  compiz_0.8.4.orig.tar.gz.delta  compiz_0.8.4.orig.tar.gz.id  compiz_0.9.10.0+repack.orig.tar.xz.delta  compiz_0.9.10.0+repack.orig.tar.xz.id  compiz_0.9.12.0+bzr3917+repack.orig.tar.xz.delta  compiz_0.9.12.0+bzr3917+repack.orig.tar.xz.id  compiz_0.9.12.0+bzr3919+repack.orig.tar.xz.delta  (+18 more)
cmake/: CMakeLists.txt  CompizBcop.cmake  CompizCommon.cmake  CompizDefaults.cmake  CompizDefaults.cmake.in  CompizGSettings.cmake  CompizGconf.cmake  CompizPackage.cmake  CompizPlugin.cmake  FindCompiz.cmake  FindXorgGTest.cmake  GoogleTest.cmake  XorgGTest.cmake  base.cmake
cmake/plugin_extensions/: CompizGenGSettings.cmake  CompizGenGconf.cmake  CompizGenInstallData.cmake  CompizGenInstallImages.cmake
cmake/src/compiz/: CMakeLists.txt  compiz_discover_gtest_tests.cpp
compizconfig/: CMakeLists.txt
compizconfig/compizconfig-python/: CMakeLists.txt  setup.py
compizconfig/compizconfig-python/tests/: compiz_config_test.py  mock.xml  test_plugin.py  test_setting.py
compizconfig/mocks/libcompizconfig/: CMakeLists.txt  compizconfig_ccs_backend_loader_mock.cpp  compizconfig_ccs_backend_loader_mock.h  compizconfig_ccs_config_file_mock.cpp  compizconfig_ccs_config_file_mock.h  compizconfig_ccs_context_mock.h  compizconfig_ccs_setting_mock.h  compizconfig_ccs_setting_stub.cpp  compizconfig_ccs_setting_stub.h
gtk/: CMakeLists.txt  Makefile.in  config.h.gtk.in
gtk/gnome/: 50-compiz-desktop-key.xml.in  50-compiz-key.xml.in  CMakeLists.txt  Makefile.in  compiz.desktop.in
gtk/window-decorator/: CMakeLists.txt  Makefile.in  actionmenu.c  blurprops.c  cairo.c  decorator.c  decorprops.c  events.c  forcequit.c  frames.c  gdk.c  gtk-window-decorator.c  gtk-window-decorator.h  gwd-cairo-window-decoration-util.h  gwd-fwd.h  gwd-metacity-window-decoration-util.c  gwd-metacity-window-decoration-util.h  gwd-settings-interface.h  gwd-settings-notified-interface.h  gwd-settings-notified.c  gwd-settings-notified.h  gwd-settings-storage-gconf.h  gwd-settings-storage-gsettings.c  gwd-settings-storage-gsettings.h  gwd-settings-storage-interface.h  gwd-settings-writable-interface.h  gwd-settings-xproperty-interface.h  gwd-settings-xproperty-storage.h  gwd-settings.c  gwd-settings.h  metacity.c  settings.c  switcher.c  tooltip.c  wnck.c
gtk/window-decorator/local-menus/: CMakeLists.txt
gtk/window-decorator/local-menus/src/: local-menus.c  local-menus.h
gtk/window-decorator/local-menus/tests/: CMakeLists.txt  test-local-menu.h
gtk/window-decorator/local-menus/tests/check_local_menu_on_off/: CMakeLists.txt  test-local-menu-on-off.cpp
gtk/window-decorator/tests/: CMakeLists.txt  test_gwd_settings.cpp
include/core/: CMakeLists.txt  abiversion.h  action.h  atoms.h  configurerequestbuffer.h  core.h  countedlist.h  icon.h  match.h  modifierhandler.h  option.h  output.h  plugin.h  pluginclasshandler.h  propertywriter.h  rect.h  region.h  screen.h  serialization.h  session.h  size.h  timer.h  window.h  wrapsystem.h
metadata/: CMakeLists.txt  Makefile.am  Makefile.in  core.xml.in  fade.xml.in  resize.xml.in  schemas.xslt
plugins/composite/: CMakeLists.txt  composite.xml.in
plugins/composite/include/composite/: agedamagequery.h  composite.h
plugins/composite/src/: composite.cpp  privates.h  screen.cpp  window.cpp
plugins/composite/src/backbuffertracking/: CMakeLists.txt
plugins/decor/: CMakeLists.txt  decor.xml.in
plugins/decor/src/: decor.cpp  decor.h
plugins/decor/tests/: CMakeLists.txt
plugins/expo/: CMakeLists.txt  expo.xml.in
plugins/expo/src/: expo.cpp  expo.h  glow.cpp  glow.h
src/logmessage/: CMakeLists.txt
src/pluginclasshandler/tests/: CMakeLists.txt  test-pluginclasshandler.cpp  test-pluginclasshandler.h
src/privatescreen/tests/: CMakeLists.txt  test-privatescreen.cpp
src/wrapsystem/tests/: CMakeLists.txt
tests/acceptance-tests/autopilot/: CMakeLists.txt  README  compiz_autopilot_acceptance_tests.cpp
tests/acceptance-tests/xorg-gtest/: CMakeLists.txt
tests/acceptance-tests/xorg-gtest/tests/: CMakeLists.txt  README  compiz_acceptance_replace_current_wm.cpp
tests/integration/glib/: CMakeLists.txt  glib_integration_test.cpp
tests/system/untest/: CMakeLists.txt  untest.c
tests/system/xorg-gtest/tests/: CMakeLists.txt  compiz_xorg_gtest_configure_window.cpp  compiz_xorg_gtest_ewmh.cpp  compiz_xorg_gtest_icccm.cpp  compiz_xorg_gtest_test_shape_handling.cpp  compiz_xorg_gtest_test_window_stacking.cpp
tests/xorg-gtest/: CMakeLists.txt
tests/xorg-gtest/communicator/: CMakeLists.txt  compiz_xorg_gtest_communicator.cpp  compiz_xorg_gtest_communicator.h
tests/xorg-gtest/include/: compiz-xorg-gtest.h
tests/xorg-gtest/plugins/: CMakeLists.txt
tests/xorg-gtest/plugins/testhelper/: CMakeLists.txt  testhelper.xml.in
tests/xorg-gtest/src/: compiz-xorg-gtest-config.h.in  compiz-xorg-gtest.cpp  compiz_xorg_gtest_main.cpp  xorg_gtest_wrapper.cpp
xslt/: CMakeLists.txt  bcop.xslt  compiz_gsettings_schemas.xslt.in
(+805 files in other folders)
